# mmdt-tokenizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/mmdt_tokenizer/: __init__.py  constants.py  core.py  csv_utils.py  patterns.py  postprocess.py  preprocess.py  preprocess_with_protection.py  rule_segmenter.py  segment.py  syllable_tokenizer.py  word_tokenizer.py
src/mmdt_tokenizer/data/: SFP.csv  SFP.txt  formatted_lex_data.txt  month.csv  month.txt  raw_lex_data.csv  syllable_core_test.csv
src/mmdt_tokenizer/postprocessing/: merging.py  segment.py  splitting.py
src/mmdt_tokenizer/preprocessing/: __init__.py  cleaning.py  helpers.py  normalizer.py  preprocess.py  protection.py  protector.py  tokenization.py
src/mmdt_tokenizer/result/: result_syllable_test.csv  result_word_500.csv  result_word_tag.csv  result_word_test.csv  result_word_text.csv
src/mmdt_tokenizer/rule_segmenter/: cleanner.py  collapse.py  engine.py  lexicon.py  merge_ops.py  scanner.py  types.py
src/mmdt_tokenizer/scripts/: build_lexicons.ipynb
src/mmdt_tokenizer/tests/: chunks.csv  dv_test.ipynb  sample_test.ipynb  test_boundary.ipynb  test_protector.ipynb  test_tagging.ipynb  test_tokenizer.py  test_tokenizer_csv_io.py  test_word_tokenizer.py
src/mmdt_tokenizer/text_pipeline/: __init__.py  text_processing.md
src/mmdt_tokenizer/text_pipeline/postprocessing/: __init__.py  merging.py  refining.py  splitting.py
src/mmdt_tokenizer/text_pipeline/preprocessing/: cleaning.py
src/mmdt_tokenizer/tokenizer/: syllable_tokenizer.py  word_tokenizer.py
src/mmdt_tokenizer/tokenzier/: core.py  rule_segmenter.py  word_tokenizer.py
src/mmdt_tokenizer/utils/: config.py  constants.py  csv_utils.py  patterns.py
tests/: sample_test.ipynb  test_tokenizer.py  test_word_tokenizer.py
