# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmdt-tokenizer"
version = "0.1.0"
description = "Myanmar grammar-driven tokenizer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MMDT" }]
license = { text = "MIT" }
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/mmdt_tokenizer"]
