# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmdt-tokenizer"
version = "0.1.0"
description = "Myanmar Text Segmenter"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MMDT" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mmdt_tokenizer"]

# dev extras (for contributors)
[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "jupyter",
]

[tool.setuptools]
# Only install Python packages under mmdt_tokenizer/
packages = { find = { where = ["."], include = ["mmdt_tokenizer*"], exclude = ["tests*", "scripts*", "tools*"] } }
include-package-data = true
